--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -30,6 +29,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "postcss-nested": "^7.0.2",
+    "react-router-dom": "^7.1.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
